# template-backend-rust-axum

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  openapi.yaml
.docker/artillery/: script.yaml
.github/workflows/: build.yml  doc-deploy.yml  lint-codebase.yml
migrations/2025-01-03-071152_create_schools/: down.sql  up.sql
src/: main.rs
src/api/: todos.rs
src/domain/: school.rs  todo.rs
src/modules/: mod.rs
src/modules/db/: connection.rs  migrations.rs  mod.rs  schema.rs  state.rs
src/modules/env/: env.rs
src/modules/router/: middlewares.rs  mod.rs  router.rs
src/modules/rpc/: handler.rs  is_accept_json.rs  mod.rs  rpc_options.rs
src/modules/tracer/: init.rs
src/services/: mod.rs
src/services/metrics/: handler.rs
src/services/schools/: handler.rs
src/services/todos/: handler.rs
src/services/utils/: mod.rs
src/services/welcome_home/: handler.rs
