[package]
name = "backend-rust-hyper"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = { version = "0" }
opentelemetry-otlp = { version = "0", features = ["tokio", "metrics", "trace", "tracing"] }
opentelemetry_sdk = { version = "0", features = ["tokio", "metrics", "rt-tokio", "trace", "tracing"] }
opentelemetry-prometheus = { version = "0.27.0" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.28.0"
tracing = { version = "0" }

prometheus = { version = "0" }
axum = { version = "0", features = ["tracing", "tokio"] }
axum-otel-metrics = { version = "0.9.1" }
axum-tracing-opentelemetry = { version = "0.24.1" }
tokio = { version = "1", features = ["full"] }

envconfig = { version = "0" }