[package]
name = "backend-rust-hyper"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = { version = "0" }
opentelemetry-otlp = { version = "0", features = ["tokio", "metrics", "trace", "tracing"] }
opentelemetry_sdk = { version = "0", features = ["tokio", "metrics", "rt-tokio", "trace", "tracing"] }
opentelemetry-prometheus = { version = "0.27.0" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.28.0"
tracing = { version = "0" }
prometheus = { version = "0" }

axum = { version = "0.8.1", features = ["tracing", "tokio", "macros"] }
axum-otel-metrics = { version = "0.9.1" }
axum-tracing-opentelemetry = { version = "0.25.0" }
tower-http = { version = "0.6", features = ["compression-full", "cors"] }

tokio = { version = "1", features = ["full"] }

envconfig = { version = "0" }

app-models = { path = "./packages/app-models" }